--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
+    <link type= "text/css" rel= "stylesheet" href= "stylesheet.css">
+    <link rel="icon" type="image/png" href="http://sr.photos2.fotosearch.com/bthumb/CSP/CSP769/k19522312.jpg">
+    <title>Pro-Bike</title>
+  </head>
+  <body background= "https://images4.alphacoders.com/598/598248.jpg">
+      <h1>Pagina Inicial</h1>
+  </body>
+</html>
