--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="icon" type="image/png" href="http://sr.photos2.fotosearch.com/bthumb/CSP/CSP769/k19522312.jpg">
     <title>Pro-Bike</title>
   </head>
-  <body background= "https://images4.alphacoders.com/598/598248.jpg">
+  <body>
       <h1>Pagina Inicial</h1>
   </body>
 </html>
