--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Pro-Bike</title>
   </head>
   <body>
-      <h1>Pagina Inicial</h1>
+    <div><h1>Pagina Inicial</h1></div>
   </body>
 </html>
