--- a/index.html
+++ b/index.html
@@ -7,10 +7,8 @@
     <title>Pro-Bike</title>
   </head>
   <body>
-    <div>
-      <div><h1>Login</h1></div>
-      <div><em><h4>Nome de usuário...</h4></em></div>
-      <div><em><h4>Senha...</h4></em></div>
+    <div id="chimbica">
+    
     </div>
   </body>
 </html>
