--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
     <div id="chimbica">
-    
+      <div><em><h4>Nome de usuário...</h4></em></div>
+      <div><em><h4>Senha...</h4></em></div>
     </div>
   </body>
 </html>
