--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <div id="chimbica">
+      <ul>
+					<li>Principal</li>
+					<li>Sobre Mim</li>
+					<li>Planos para Dominar o Mundo</li>
+					<li>Contato</li>
+				</ul>
     </div>
   </body>
 </html>
