--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
   <body>
     <div id="chimbica">
       <ul>
-					<li>Principal</li>
-					<li>Sobre Mim</li>
-					<li>Planos para Dominar o Mundo</li>
-					<li>Contato</li>
-				</ul>
+	<li>Eventos</li>
+	<li>Fórum</li>
+	<li>Criar rotas</li>
+	<li>Saiba mais</li>
+      </ul>
     </div>
   </body>
 </html>
