--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <div id="chimbica">
       <ul>
       	<em>
+      	<li>Página inicial</li>
 	<li>Eventos</li>
 	<li>Fórum</li>
 	<li>Criar rotas</li>
