--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   <body>
     <div id="chimbica">
       <ul>
+      	<a href="https://kauanmls.github.io/web00pi/">Sair</a>
       	<em>
-      	<li>Página inicial</li>
+      	<li><a href="https://kauanmls.github.io/web00pi/">Página inicial</a></li>
 	<li>Eventos</li>
 	<li>Fórum</li>
 	<li>Criar rotas</li>
