--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   </head>
   <body>
     <div id="chimbica">
-      <a href="https://kauanmls.github.io/web00pi/">Sair</a>
+      <a href="https://kauanmls.github.io/web00pi/" classe="caceta">Sair</a>
       <ul>
       	<em>
-      	<li><a href="https://kauanmls.github.io/web00pi/">Página inicial</a></li>
+      	<li><a href="https://kauanmls.github.io/web00pi/" classe="caceta">Página inicial</a></li>
 	<li>Eventos</li>
 	<li>Fórum</li>
 	<li>Criar rotas</li>
