--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   </head>
   <body>
     <div id="chimbica">
-      <a href="https://kauanmls.github.io/web00pi/" id="caceta">Sair</a>
+      <a href="https://kauanmls.github.io/web00pi/" id="cau">Sair</a>
       <ul>
       	<em>
       	<li><a href="https://kauanmls.github.io/web00pi/" classe="caceta">Página inicial</a></li>
 	<li>Eventos</li>
 	<li>Fórum</li>
 	<li>Criar rotas</li>
-	<li>Saiba mais</li>
+	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Saiba mais</li>
         </em>
       </ul>
     </div>
