--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div id="chimbica">
-      <a href="https://kauanmls.github.io/web003/" id="cau">Sair</a>
+      <a href="https://kauanmls.github.io/web003/" id="cau"><div>Sair</div></a>
       <ul>
       	<em>
       	<li><a href="https://kauanmls.github.io/web00pi/" classe="caceta">Página inicial</a></li>
