--- a/index.html
+++ b/index.html
@@ -19,5 +19,6 @@
         </em>
       </ul>
     </div>
+    <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
   </body>
 </html>
