--- a/index.html
+++ b/index.html
@@ -20,5 +20,6 @@
       </ul>
     </div>
     <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
+    <p>&nbsp;&nbsp;A Pro-Bike é uma rede social para quem gosta de andar de bicicleta e quer fazer novos amigos para pedalar juntos.</p>
   </body>
 </html>
