--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         </em>
       </ul>
     </div>
-    <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
+    <p><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
     <p>A Pro-Bike é uma rede social</p>
     <p>para quem gosta de andar de bicicleta</p>
     <p>e quer fazer novos amigos para pedalar juntos.</p>
+    </p>
   </body>
 </html>
