--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 	<li>Eventos</li>
 	<li>Fórum</li>
 	<li>Criar rotas</li>
-	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Saiba mais</li>
+	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Saiba mais</a></li>
         </em>
       </ul>
     </div>
