--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
       </ul>
     </div>
     <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
-    <p>A Pro-Bike é uma rede social</p>
+    <div>
+    <p id="aui">A Pro-Bike é uma rede social</p>
     <p>para quem gosta de andar de bicicleta</p>
     <p>e quer fazer novos amigos para pedalar juntos.</p>
+    </div>  
   </body>
 </html>
