--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
 	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Saiba mais</a></li>
         </em>
       </ul>
-    </div d="papi">
+    </div>
+    <div d="papi">
     <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
     <p id="aui">A Pro-Bike é uma rede social</p>
     <p>para quem gosta de andar de bicicleta</p>
