--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       	<li><a href="https://kauanmls.github.io/web00pi/" classe="caceta">Página inicial</a></li>
 	<li>Eventos</li>
 	<li>Fórum</li>
+	<li>Grupos</li>
 	<li>Criar rotas</li>
 	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Saiba mais</a></li>
         </em>
