--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         </em>
       </ul>
     </div>
-    <div d="papi">
+    <div id="papi">
       <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
       <p id="aui">A Pro-Bike é uma rede social</p>
       <p>para quem gosta de andar de bicicleta</p>
       <p>e quer fazer novos amigos para pedalar juntos.</p>
-    </div>  
+    </div>
+    <div id="pipa"></div>
   </body>
 </html>
