--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
         </em>
       </ul>
     </div>
-    <div id="papi">
-      <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg">
-      <p>A Pro-Bike é uma rede social</p>
+    <div>
+      <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg" classe="papi">
+      <p classe="papi">A Pro-Bike é uma rede social</p>
       <p>para quem gosta de andar de bicicleta</p>
       <p>e quer fazer novos amigos para pedalar juntos.</p>
     </div>
