--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         </em>
       </ul>
     </div>
-    <div>
+    <div id="cruzeta">
       <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg" classe="papi">
       <p classe="papi">A Pro-Bike é uma rede social</p>
-      <p>para quem gosta de andar de bicicleta</p>
-      <p>e quer fazer novos amigos para pedalar juntos.</p>
+      <p classe="papi">para quem gosta de andar de bicicleta</p>
+      <p classe="papi">e quer fazer novos amigos para pedalar juntos.</p>
     </div>
     <div id="pipa"></div>
   </body>
