--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </em>
       </ul>
     </div>
-    <div id="cruzeta">
+    <div>
       <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg" classe="papi">
       <p classe="papi">A Pro-Bike é uma rede social</p>
       <p classe="papi">para quem gosta de andar de bicicleta</p>
