--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       </ul>
     </div>
     <p>
-      <img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/>
-      <p>A Pro-Bike é uma rede social</p>
-      <p>para quem gosta de andar de bicicleta</p>
-      <p>e quer fazer novos amigos para pedalar juntos.</p>
+      <div><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/></div>
+      <div>
+        <p>A Pro-Bike é uma rede social</p>
+        <p>para quem gosta de andar de bicicleta</p>
+        <p>e quer fazer novos amigos para pedalar juntos.</p>
+      </div>
     </p>
     <div id="pipa"></div>
   </body>
