--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <p>
       <div><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/></div>
-      <div>
+      <div id="texto">
         <p>A Pro-Bike é uma rede social</p>
         <p>para quem gosta de andar de bicicleta</p>
         <p>e quer fazer novos amigos para pedalar juntos.</p>
