--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </ul>
     </div>
     <div>
-      <div><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/></div>
+      <div><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg" id="imagem"/></div>
       <div id="texto">
         <p>A Pro-Bike é uma rede social</p>
         <p>para quem gosta de andar de bicicleta</p>
