--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </em>
       </ul>
     </div>
-      <div><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/></div>
+      <div id="imagem"><img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/></div>
       <div id="texto">
         <p>A Pro-Bike é uma rede social</p>
         <p>para quem gosta de andar de bicicleta</p>
