--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </em>
       </ul>
     </div>
-      <div id="imagem">
+      <div>
       	<img src="https://qualitypersonal.files.wordpress.com/2012/04/aulas-de-bike.jpg"/>
         <div id="texto">
           <p>A Pro-Bike é uma rede social</p>
