--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <ul>
       	<em>
       	<li><a href="https://kauanmls.github.io/web00pi/" classe="caceta">Página inicial</a></li>
-	<li>Eventos</li>
+	<li><a href="https://lucasrzd.github.io/web003/" classe="caceta">Eventos</a></li>
 	<li>Fórum</li>
 	<li>Grupos</li>
 	<li>Criar rotas</li>
